@@ -1,3 +1,11 @@
+2001-11-07  Mike Kestner <mkestner@speakeasy.net>
+
+	* codegen/defs-parse.pl (gen_object): Insert using statements. Insert 
+	class members from corresponding .custom file.  
+	* gtk/Window.custom : Renamed file from Window.cs.  Removed all the
+	automatically generated members.  This will be the mechanism used to
+	improve upon the mechanically generated binding.
+
 2001-11-05  Mike Kestner <mkestner@speakeasy.net>
 
 	* codegen/defs-parse.pl (gen_object): Generate a ctor (IntPtr obj) for
